--- a/back/.gitignore
+++ b/back/.gitignore
@@ -1,22 +1,17 @@
+# See http://help.github.com/ignore-files/ for more about ignoring files.
+
 # compiled output
 /dist
+/tmp
+/out-tsc
+# Only exists if Bazel was run
+/bazel-out
+
+# dependencies
 /node_modules
 
-# Logs
-logs
-*.log
-npm-debug.log*
-pnpm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-lerna-debug.log*
-
-# OS
-.DS_Store
-
-# Tests
-/coverage
-/.nyc_output
+# profiling files
+chrome-profiler-events*.json
 
 # IDEs and editors
 /.idea
@@ -25,6 +20,7 @@ lerna-debug.log*
 .c9/
 *.launch
 .settings/
+.editorconfig
 *.sublime-workspace
 
 # IDE - VSCode
@@ -33,3 +29,20 @@ lerna-debug.log*
 !.vscode/tasks.json
 !.vscode/launch.json
 !.vscode/extensions.json
+.history/*
+
+# misc
+.eslintrc.js
+/.sass-cache
+/connect.lock
+yarn.lock
+/coverage
+/libpeerconnection.log
+npm-debug.log
+yarn-error.log
+testem.log
+/typings
+
+# System Files
+.DS_Store
+Thumbs.db
