--- a/back/package.json
+++ b/back/package.json
@@ -30,7 +30,10 @@
     "config": "^3.3.6",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
-    "rxjs": "^7.2.0"
+    "rxjs": "^7.2.0",
+    "fastify-swagger": "^4.12.6",
+    "moment": "^2.29.1",
+    "swagger-ui-express": "^4.1.6"
   },
   "devDependencies": {
     "@nestjs/cli": "^8.0.0",
@@ -53,7 +56,8 @@
     "ts-loader": "^9.2.3",
     "ts-node": "^10.0.0",
     "tsconfig-paths": "^3.10.1",
-    "typescript": "^4.3.5"
+    "typescript": "^4.3.5",
+    "@types/multer": "^1.4.7"
   },
   "jest": {
     "moduleFileExtensions": [
