--- a/back/package.json
+++ b/back/package.json
@@ -27,12 +27,15 @@
     "@nestjs/platform-express": "^8.0.0",
     "@nestjs/platform-fastify": "^8.2.3",
     "@nestjs/swagger": "^5.1.5",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.13.2",
     "config": "^3.3.6",
+    "fastify-swagger": "^4.12.6",
+    "moment": "^2.29.1",
+    "mongoose": "^6.0.14",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.2.0",
-    "fastify-swagger": "^4.12.6",
-    "moment": "^2.29.1",
     "swagger-ui-express": "^4.1.6"
   },
   "devDependencies": {
@@ -41,6 +44,7 @@
     "@nestjs/testing": "^8.0.0",
     "@types/express": "^4.17.13",
     "@types/jest": "27.0.2",
+    "@types/multer": "^1.4.7",
     "@types/node": "^16.0.0",
     "@types/supertest": "^2.0.11",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
@@ -56,8 +60,7 @@
     "ts-loader": "^9.2.3",
     "ts-node": "^10.0.0",
     "tsconfig-paths": "^3.10.1",
-    "typescript": "^4.3.5",
-    "@types/multer": "^1.4.7"
+    "typescript": "^4.3.5"
   },
   "jest": {
     "moduleFileExtensions": [
